NOID: Technical implementation
Add header item
Add images to be used in the recycler view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="orange">#FC6016</color>
+    <color name="dark_gray">#858585</color>
+    <color name="light_gray">#D5D5D5</color>
+
+    <color name="bullet_point_text_color">@color/black</color>
+    <color name="black_with_45">#72000000</color>
+
 </resources>
