--- a/app/src/main/res/layout/filters_layout.xml
+++ b/app/src/main/res/layout/filters_layout.xml
@@ -11,6 +11,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:elevation="8dp"
+        android:layout_marginBottom="30dp"
         app:cardBackgroundColor="@color/dark_gray"
         app:cardCornerRadius="18dp">
 
