--- a/app/src/main/res/layout/car_recycler_view_item.xml
+++ b/app/src/main/res/layout/car_recycler_view_item.xml
@@ -13,7 +13,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray">
+        android:background="@color/light_gray"
+        android:paddingTop="25dp">
 
         <ImageView
             android:id="@+id/recyclerViewItemIV"
