--- a/app/src/main/res/layout/car_recycler_view_item.xml
+++ b/app/src/main/res/layout/car_recycler_view_item.xml
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:isIndicator="false"
+            android:isIndicator="true"
             android:numStars="@{recyclerViewItem.numberOfStarts}"
             android:progressBackgroundTint="@color/orange"
             android:progressTint="@color/orange"
