--- a/app/src/main/res/layout/filters_layout.xml
+++ b/app/src/main/res/layout/filters_layout.xml
@@ -3,17 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="vm"
+            type="com.cnexia.technicaltest.view.MainViewModel" />
+
+        <import type="com.cnexia.technicaltest.view.adapter.FilterType" />
+
+    </data>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/filterLayoutCV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:elevation="8dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginStart="@dimen/filter_card_view_margin_start"
+        android:layout_marginTop="@dimen/filter_card_view_margin_top"
+        android:layout_marginEnd="@dimen/filter_card_view_margin_end"
+        android:layout_marginBottom="@dimen/filter_card_view_margin_bottom"
+        android:elevation="@dimen/filter_card_view_elevation"
         app:cardBackgroundColor="@color/dark_gray"
-        app:cardCornerRadius="18dp">
+        app:cardCornerRadius="@dimen/filter_card_view_corner_radius">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -21,30 +31,28 @@
 
             <TextView
                 android:id="@+id/filterLayoutTitleTV"
+                style="@style/FiltersTitleStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="@dimen/filter_title_margin"
+                android:layout_marginTop="@dimen/filter_title_margin"
                 android:text="@string/main_activity_filters_title"
-                android:textColor="@android:color/white"
-                android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/main_activity_filters_title" />
 
             <EditText
                 android:id="@+id/filterLayoutMakeET"
+                style="@style/FiltersEditTextStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginTop="@dimen/filter_edit_text_margin_top"
+                android:layout_marginEnd="@dimen/filter_edit_text_margin_end"
                 android:background="@drawable/rounded_edittext"
+                android:filterType="@{FilterType.MAKE}"
                 android:hint="@string/main_activity_filters_make_hint"
-                android:inputType="text"
-                android:padding="5dp"
-                android:textColorHint="@color/dark_gray"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:padding="@dimen/filter_edit_text_margin_padding"
+                android:setOnTextChangeListener="@{vm}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/filterLayoutTitleTV"
                 app:layout_constraintTop_toBottomOf="@+id/filterLayoutTitleTV"
@@ -52,18 +60,17 @@
 
             <EditText
                 android:id="@+id/filterLayoutModelET"
+                style="@style/FiltersEditTextStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginBottom="24dp"
+                android:layout_marginTop="@dimen/filter_edit_text_margin_top"
+                android:layout_marginEnd="@dimen/filter_edit_text_margin_end"
+                android:layout_marginBottom="@dimen/filter_edit_text_margin_bottom"
                 android:background="@drawable/rounded_edittext"
+                android:filterType="@{FilterType.MODEL}"
                 android:hint="@string/main_activity_filters_model_hint"
-                android:inputType="text"
-                android:padding="5dp"
-                android:textColorHint="@color/dark_gray"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:padding="@dimen/filter_edit_text_margin_padding"
+                android:setOnTextChangeListener="@{vm}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/filterLayoutMakeET"
