--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,8 @@
 
                     <include
                         android:id="@+id/filters"
-                        layout="@layout/filters_layout" />
+                        layout="@layout/filters_layout"
+                        app:vm="@{vm}"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </RelativeLayout>
 
